--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <form id="transactionForm" action="/submit" method="post">
           <div>
             <label for="type">
-              <input type="checkbox" name="type" id="type" />
+              <input type="checkbox" name="type" id="type" value="on" />
               <div class="option">
                 <span>Expense</span>
                 <span>Income</span>
               </div>
             </label>
-          </div>
+          </div>              
           <div>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required />
@@ -87,9 +87,9 @@
 
     <!-- Include Axios script -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    <script src="script.js"></script>
     <!-- Add this script to your HTML file -->
-    <script>
+    <!--<script>
       document.addEventListener('DOMContentLoaded', function () {
         const transactionForm = document.getElementById('transactionForm');
 
@@ -127,7 +127,7 @@
             });
         });
       });
-    </script>
+    </script> -->
 
   </body>
 </html>
